# tools_demos_public

./: New Notebook 2026-03-06 09_54_36.ipynb
Databricks Apps/Farma - Genie + Knowledge Assistent/: Guia para Edição do App.py
Databricks Apps/Farma - Genie + Knowledge Assistent/files/: databricks.yml
Databricks Apps/app-teste-select/: app.py  app.yaml
Databricks Apps/data-catalog-explorer/: .gitignore  app.yaml  server.js
Databricks Apps/data-catalog-explorer (1)/: CLAUDE.md  package-lock.json  package.json
Databricks Apps/data-catalog-explorer (1)/frontend/: package.json
Databricks Apps/data-catalog-explorer/frontend/: index.html  package-lock.json
Databricks Apps/databricks-observability/: .gitignore  CLAUDE.md  app.py  app.yaml  pyproject.toml  requirements.txt
Databricks Apps/databricks-observability/frontend/: index.html  package-lock.json  package.json
Databricks Apps/databricks-observability/frontend/src/: App.tsx  types.ts
Databricks Apps/databricks-observability/frontend/src/components/: JobTasksView.tsx  JobsTable.tsx  RunsTable.tsx  StatsCards.tsx  StatusBadge.tsx  TasksTable.tsx
Databricks Apps/databricks-observability/server/: config.py
Databricks Apps/databricks-observability/server/routes/: jobs.py  runs.py
Databricks Apps/exames-clinicos-app/: .gitignore  Dashboard de Exames Clínicos.lvdash.json  Exames_Clinicos_Arquitetura.py  app.py  app.yaml  deploy.sh  requirements.txt  test_regex.py
Databricks Apps/file-validator-app/: .gitignore  CLAUDE.md  app.py  app.yaml  requirements.txt
app-teste-select/: requirements.txt
(+70 files in other folders)
