[project]
name = "databricks-observability"
version = "1.0.0"
description = "Databricks Jobs & Runs Observability Dashboard"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "aiohttp>=3.9.0",
    "databricks-sdk>=0.30.0",
    "pydantic>=2.0.0",
]
